ajout nettoyage popup avec supression

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,8 +49,9 @@
     <div class="popup">
       <h3>Ajouter un locataire</h3>
       <span>Arrivée le: </span
-      ><input type="date" name="date" id="arrive" /><span>Départ le: </span
-      ><input type="date" name="date" id="depart" />
+      ><input class="dataLoc" type="date" name="date" id="arrive" /><span
+        >Départ le: </span
+      ><input class="dataLoc" type="date" name="date" id="depart" />
       <section class="infoLocataires">
         <div class="nom">
           <span>Nom</span><br />
