ajout obligation entrer arrive et depart plus demarage a jour sur 2025

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -130,14 +130,14 @@
     <h1>Mobil Home Dunes De Contis</h1>
 
     <div class="choose-year">
-      <label for="year">Choisissez l'année: </label>
+      <label for="year">Année:</label>
       <input
         type="number"
         id="year"
         name="year"
         min="2021"
         max="3000"
-        value="2021"
+        value="2025"
       />
     </div>
     <div class="calendar">
