cretion popup alerte et mise en commentaire cases true false

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,6 +46,11 @@
         </li>
       </ul>
     </nav>
+    <section class="popupAlert">
+      <h3>Alerte</h3>
+      <p class="message">Message ici</p>
+      <button class="fermer">Fermer</button>
+    </section>
     <div class="popup">
       <h3>Ajouter un locataire</h3>
       <section class="entete">
