--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,7 +64,7 @@
       <button class="fermer">Fermer</button>
     </section>
     <div class="popup">
-      <h3>Ajouter un locataire</h3>
+      <h3 id="titrePopup">Ajouter un locataire</h3>
       <section class="entete">
         <span>Arrivée le: </span
         ><input class="dataLoc" type="date" name="date" id="arrive" /><span
