fin des doublon listener je pense

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <title>MobilHome Contis</title>
     <link rel="shortcut icon" href="assets/icones/maison-mobile.png" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./messageStyle.css" />
     <script type="module" src="./index.js" defer></script>
     <script type="module" src="./locataires.js" defer></script>
     <script type="module" src="./message.js" defer></script>
@@ -155,7 +156,7 @@
 
     <div class="calendar">
       <div>
-        <h2>MARS<button class="save">Enregistrer</button></h2>
+        <h2>MARS<button class="save">Message Locataires du mois</button></h2>
         <div class="container">
           <div class="grid">
             <div>N°sem</div>
@@ -225,7 +226,9 @@
       </div>
 
       <div>
-        <h2 id="AVRIL">AVRIL<button class="save">Enregistrer</button></h2>
+        <h2 id="AVRIL">
+          AVRIL<button class="save">Message Locataires du mois</button>
+        </h2>
         <div class="container">
           <div class="grid">
             <div>N°sem</div>
@@ -295,7 +298,9 @@
       </div>
 
       <div>
-        <h2 id="MAI">MAI<button class="save">Enregistrer</button></h2>
+        <h2 id="MAI">
+          MAI<button class="save">Message Locataires du mois</button>
+        </h2>
         <div class="container">
           <div class="grid">
             <div>N°sem</div>
@@ -365,7 +370,9 @@
       </div>
 
       <div>
-        <h2 id="JUIN">JUIN<button class="save">Enregistrer</button></h2>
+        <h2 id="JUIN">
+          JUIN<button class="save">Message Locataires du mois</button>
+        </h2>
         <div class="container">
           <div class="grid">
             <div>N°sem</div>
@@ -435,7 +442,9 @@
       </div>
 
       <div>
-        <h2 id="JUILLET">JUILLET<button class="save">Enregistrer</button></h2>
+        <h2 id="JUILLET">
+          JUILLET<button class="save">Message Locataires du mois</button>
+        </h2>
         <div class="container">
           <div class="grid">
             <div>N°sem</div>
@@ -505,7 +514,9 @@
       </div>
 
       <div>
-        <h2 id="AOUT">AOUT<button class="save">Enregistrer</button></h2>
+        <h2 id="AOUT">
+          AOUT<button class="save">Message Locataires du mois</button>
+        </h2>
         <div class="container">
           <div class="grid">
             <div>N°sem</div>
@@ -576,7 +587,7 @@
 
       <div>
         <h2 id="SEPTEMBRE">
-          SEPTEMBRE<button class="save">Enregistrer</button>
+          SEPTEMBRE<button class="save">Message Locataires du mois</button>
         </h2>
         <div class="container">
           <div class="grid">
@@ -647,7 +658,9 @@
       </div>
 
       <div>
-        <h2 id="OCTOBRE">OCTOBRE<button class="save">Enregistrer</button></h2>
+        <h2 id="OCTOBRE">
+          OCTOBRE<button class="save">Message Locataires du mois</button>
+        </h2>
         <div class="container">
           <div class="grid">
             <div>N°sem</div>
@@ -717,7 +730,9 @@
       </div>
 
       <div>
-        <h2 id="NOVEMBRE">NOVEMBRE<button class="save">Enregistrer</button></h2>
+        <h2 id="NOVEMBRE">
+          NOVEMBRE<button class="save">Message Locataires du mois</button>
+        </h2>
         <div class="container">
           <div class="grid">
             <div>N°sem</div>
