--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,11 +34,11 @@
         </li>
 
         <li>
-          <a href="https://booking.com" target="_blank">Booking</a>
+          <a href="https://admin.booking.com/" target="_blank">Booking</a>
         </li>
 
         <li>
-          <a href="https://my.siblu.fr" target="_blank">Siblu</a>
+          <a href="https://my.sibluconnect.com/" target="_blank">Siblu</a>
         </li>
 
         <li>
